--- a/OBR-CS.css
+++ b/OBR-CS.css
@@ -7,11 +7,14 @@ body {
 }
 
 tr {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
-td {
-    font-size: 1.1rem;
+input[type='number'] {
+    font-family: "Arial Black", sans-serif;
+    text-align: center;
+    width: 2.5rem;
+    height: 1.2rem;
 }
 
 /* grid container */
