--- a/OBR-CS.css
+++ b/OBR-CS.css
@@ -10,10 +10,6 @@ table {
     font-size: 1.2rem;
 }
 
-th {
-    margin-bottom: 50px;
-}
-
 input[type='number'] {
     font-weight: 600;
     font-size: 1rem;
@@ -22,16 +18,16 @@ input[type='number'] {
     height: 1.2rem;
 }
 
-input[type='text'] {
-    font-family: "Arial Narrow", sans-serif;
-    font-size: 1.1rem;
-    width: 99%;
-}
-
 input[type='checkbox'] {
     width: 1.5rem;
     height: 1.3rem;
     vertical-align: -50%
+}
+
+input[type='text'] {
+    font-family: "Arial Narrow", sans-serif;
+    font-size: 1.1rem;
+    width: 100%;
 }
 
 /* grid container */
@@ -47,7 +43,7 @@ input[type='checkbox'] {
 
 /* general column padding */
 .holy-grail-grid>* {
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 /* assign columns to grid areas */
@@ -59,16 +55,25 @@ input[type='checkbox'] {
 .holy-grail-grid>.left-sidebar {
     grid-area: left-sidebar;
     background: #f5d55f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .holy-grail-grid>.main-content {
     grid-area: main-content;
     background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .holy-grail-grid>.right-sidebar {
     grid-area: right-sidebar;
     background: #c5ed77;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .holy-grail-grid>.footer {
