--- a/main.css
+++ b/main.css
@@ -6,20 +6,10 @@ body {
     background: rgba(250, 225, 112, 0.25);
 }
 
-h1,
 h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-    margin-top: 0;
-    margin-bottom: 0.5rem;
+{
+margin-top: 0;
+margin-bottom: 0.5rem;
 }
 
 table {
