--- a/main.css
+++ b/main.css
@@ -39,9 +39,10 @@ input[type='text'] {
 button {
     font-family: "Arial Narrow", sans-serif;
     font-size: 1.1rem;
+    color: rgb(0, 0, 0);
     width: 10%;
     background-color: rgb(255, 255, 255);
-    border: 1px solid;
+    border: 0.5px solid;
     border-radius: 1rem;
 }
 
