--- a/main.css
+++ b/main.css
@@ -16,42 +16,6 @@ table {
     font-size: 1.3rem;
 }
 
-.button:hover {
-    background: rgb(225, 225, 225);
-}
-
-.alt-btn:hover {
-    background: rgb(225, 225, 225);
-}
-
-.alt-btn {
-    font-family: "Arial Narrow";
-    font-size: 1.1rem;
-    text-align: center;
-    color: rgb(0, 0, 0);
-    padding: 2.4px;
-    width: 9.5%;
-    background-color: rgb(255, 255, 255);
-    border: 0.5px solid;
-    border-radius: 1rem;
-    position: relative;
-    float: right;
-    cursor: pointer;
-}
-
-.hide-file {
-    opacity: 0;
-    position: absolute;
-    z-index: 2;
-    cursor: pointer;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-}
-
 input[type='number'] {
     font-family: "Arial Narrow";
     font-size: 1.1rem;
@@ -73,14 +37,42 @@ input[type='text'] {
 }
 
 button {
-    font-family: "Arial Narrow", sans-serif;
+    font-family: copperplate;
     font-size: 1.1rem;
     color: rgb(0, 0, 0);
-    width: 10%;
+    width: 8rem;
     background-color: rgb(255, 255, 255);
-    border: 0.5px solid;
+    border: 1.5px solid;
     border-radius: 1rem;
     cursor: pointer;
+}
+
+.button:hover {
+    background: black;
+    border-color: black;
+    font-weight: bold;
+    color: white;
+}
+
+.alt-btn {
+    font-family: copperplate;
+    font-size: 1.1rem;
+    color: rgb(0, 0, 0);
+    width: 8rem;
+    background-color: rgb(255, 255, 255);
+    border: 1.5px solid;
+    border-radius: 1rem;
+    cursor: pointer;
+    padding: 2.4px;
+    text-align: center;
+    float: right;
+}
+
+.alt-btn:hover {
+    background: black;
+    border-color: black;
+    font-weight: bold;
+    color: white;
 }
 
 /* grid container */
@@ -100,26 +92,25 @@ button {
 }
 
 /* assign columns to grid areas */
-.holy-grail-grid>.header {
+.title {
     display: flex;
     flex-flow: row nowrap;
     grid-area: header;
     background: #f97171;
 }
 
-.holy-grail-grid>.name {
-    flex: 3;
-}
-
-.holy-grail-grid>.logo {
+.name {
     flex: 2;
-    text-align: center;
-    vertical-align: bottom;
 }
 
-.holy-grail-grid>.user {
+.logo {
     flex: 3;
-    text-align: right;
+    display: flex;
+    justify-content: center;
+}
+
+.user {
+    flex: 2;
 }
 
 .holy-grail-grid>.left-sidebar {
