--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ input[type='text'] {
 
 button {
     font-family: copperplate;
+    font-weight: lighter;
     font-size: 1.1rem;
     color: rgb(0, 0, 0);
     width: 8rem;
