--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ table {
 }
 
 input[type='number'] {
-    font-family: "Arial Narrow";
+    font-family: "Arial Narrow", sans-serif;
     font-size: 1.1rem;
     text-align: center;
     width: 2.5rem;
