--- a/main.css
+++ b/main.css
@@ -117,11 +117,20 @@ button:hover {
 
 select {
     font-family: copperplate;
-    font-size: 1.25rem;
+    font-size: 1rem;
     width: 10rem;
     text-align-last: center;
     padding-right: 29px;
     margin-bottom: 0.15rem;
+    font-family: copperplate;
+    font-weight: lighter;
+    color: rgb(0, 0, 0);
+    width: 13rem;
+    background-color: rgb(255, 255, 255);
+    border: 1.5px solid;
+    border-radius: .4rem;
+    /* cursor: pointer; */
+    padding: 2px;
 }
 
 .left-sidebar {
