--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
 
 h2,
 h4 {
+    text-align: center;
     margin-top: 0;
     margin-bottom: 0.3rem;
 }
@@ -77,6 +78,17 @@ button:hover {
     color: white;
 }
 
+.resizable-image {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 85%;
+    max-height: 63px;
+    width: auto;
+    height: auto;
+    text-align: center;
+}
+
 /* grid container */
 .holy-grail-grid {
     display: grid;
@@ -97,40 +109,27 @@ button:hover {
 .header {
     display: flex;
     flex-flow: row nowrap;
+    justify-content: space-evenly;
     grid-area: header;
     background: #f97171;
 }
 
-.name {
-    flex: 2;
-}
-
-.logo {
-    flex: 3;
-    display: flex;
-    justify-content: center;
-}
-
-.user {
-    flex: 2;
-}
-
 select {
-    font-family: copperplate;
-    font-size: 1rem;
-    width: 10rem;
-    text-align-last: center;
-    padding-right: 29px;
-    margin-bottom: 0.15rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font-family: copperplate;
     font-weight: lighter;
-    color: rgb(0, 0, 0);
-    width: 13rem;
+    font-size: 1rem;
+    width: 12rem;
+    padding: 3px;
+    text-align-last: center;
+    margin-bottom: 0.15rem;
     background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border: 1.5px solid;
     border-radius: .4rem;
-    /* cursor: pointer; */
-    padding: 2px;
+    cursor: pointer;
 }
 
 .left-sidebar {
