--- a/main.css
+++ b/main.css
@@ -7,13 +7,25 @@ body {
 }
 
 h2 {
+    display: block;
+    font-size: 1.5em;
     text-align: center;
-    margin-bottom: 0;
+    margin-top: 0rem;
+    margin-bottom: 0.1rem;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
 
 h4 {
+    display: block;
+    font-size: 1em;
     text-align: center;
-    margin-bottom: 0.3rem;
+    margin-top: 1.33rem;
+    margin-bottom: 0.15rem;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
 
 table {
@@ -32,7 +44,6 @@ input[type='number'] {
 input[type='checkbox'] {
     width: 1.5rem;
     height: 1.3rem;
-    vertical-align: -50%;
 }
 
 input[type='text'] {
@@ -100,13 +111,16 @@ select {
 }
 
 .resizable-image {
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
     display: flex;
     margin-left: auto;
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
     max-width: 85%;
-    max-height: 63px;
+    max-height: 60px;
     width: auto;
     height: auto;
 }
@@ -167,7 +181,7 @@ select {
     grid-area: footer;
     background: #72c2f1;
     display: flex;
-    flex-direction: row;
+    flex-direction: row nowrap;
     justify-content: space-evenly;
 }
 
