--- a/main.css
+++ b/main.css
@@ -125,6 +125,16 @@ select {
     height: auto;
 }
 
+.valid-scores {
+    color: black;
+    /* font-weight: bold; */
+}
+
+.invalid-scores {
+    color: red;
+    font-weight: bold;
+}
+
 /* grid container */
 .holy-grail-grid {
     display: grid;
