--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 body {
     font-family: Copperplate, "Copperplate Gothic Light", "Copperplate Gothic Bold", fantasy;
     font-weight: lighter;
-    font-size: calc(14px + 0.390625vw);
-    padding: calc(0px + 0.5625vw);
+    font-size: calc(16px + 0.390625vw);
     background: rgba(250, 225, 112, 0.25);
 }
 
@@ -28,16 +27,11 @@ h4 {
     font-weight: bold;
 }
 
-table {
-    font-size: 1.3rem;
-}
-
 input[type='number'] {
     font-family: "Arial Narrow", sans-serif;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     text-align: center;
     width: 2.5rem;
-    height: 1.2rem;
     padding-left: .6rem;
 }
 
@@ -48,14 +42,14 @@ input[type='checkbox'] {
 
 input[type='text'] {
     font-family: "Arial Narrow", sans-serif;
-    font-size: 1.1rem;
-    width: 9rem;
+    font-size: 1.2rem;
+    width: 7.5rem;
 }
 
 button {
     font-family: Copperplate, "Copperplate Gothic Light", "Copperplate Gothic Bold", fantasy;
     font-weight: lighter;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     color: black;
     width: 7.5rem;
     background-color: rgb(255, 255, 255);
@@ -78,9 +72,9 @@ select {
     appearance: none;
     font-family: Copperplate, "Copperplate Gothic Light", "Copperplate Gothic Bold", fantasy;
     font-weight: lighter;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     color: black;
-    width: 9rem;
+    width: 10rem;
     padding: 3px;
     text-align-last: center;
     margin-bottom: 3px;
@@ -92,7 +86,7 @@ select {
 
 .alt-btn {
     font-family: Copperplate, "Copperplate Gothic Light", "Copperplate Gothic Bold", fantasy;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     color: black;
     width: 8rem;
     background-color: white;
@@ -111,19 +105,21 @@ select {
     color: white;
 }
 
-.resizable-image {
-    display: inline-block;
+.resizable-logo {
+    font-family: Copperplate, "Copperplate Gothic Light", "Copperplate Gothic Bold", fantasy;
+    font-size: 2rem;
+    color: white;
+    /* display: inline-block; */
     vertical-align: middle;
-    height: 100%;
-    display: flex;
-    margin-left: auto;
+    /* height: 100%; */
+    /* display: flex; */
+    /* margin-left: auto;
     margin-right: auto;
     margin-top: auto;
-    margin-bottom: auto;
-    max-width: 85%;
+    margin-bottom: auto; */
     max-height: 60px;
-    width: auto;
-    height: auto;
+    /* width: auto;
+    height: auto; */
 }
 
 /* grid container */
